--- a/sextant/src/App.css
+++ b/sextant/src/App.css
@@ -1,38 +1,42 @@
+body {
+  background-color: #f4f5f6;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.banner-title {
+  color: #009EDC;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 700;
+  margin-top: 1em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.data-card {
+  border: 3px solid #000000;
+  border-radius: 5px;
+  color: black;
+  width: fit-content;
+  min-width: 150px;
+  background-color: #9e9ea2;
+  margin: 20px;
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 300;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.logo {
+  width: 100px;
+  margin: 8px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.user-data-title {
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 300;
 }
